--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -19,7 +19,61 @@
   </head>
   <body>
 
+    <div class="container">
 
+        <div class="jumbotron">
+
+        <h1>Video Game Survey</h1>
+
+        <div class="row">
+
+          <div class="col-md-4 col-md-offset-4 panel1">
+            <form>
+                <h2>What is your Favorite Video Game?</h2>
+
+                <div class="form-group">
+                  <label for="name">Name: </label>
+                  <input id="name" class="form-control" type="text">
+                </div>
+
+                <button type="submit" class="btn">Submit</button>
+
+            </form>
+
+          </div>
+
+          <div class="col-md-4 col-md-offset-4 panel2">
+
+            <form>
+                <h2>How often do you play <span class="game"></span>?</h2>
+
+                <label class="radio-inline"><input type="radio" name="days" value="days" checked>Daily</label>
+                <label class="radio-inline"><input type="radio" name="days" value="weeks">Weekly</label>
+                <label class="radio-inline"><input type="radio" name="days" value="months">Monthly</label>
+
+                <div class="form-group">
+                  <label for="long">How many hours you play <span class="game"></span> each <span class="frequency">day<span>: </label>
+                  <input id="long" class="form-control" type="number">
+                </div>
+
+
+
+                <button type="submit" class="btn">Submit</button>
+
+            </form>
+
+          </div>
+
+          <div class="col-md-4 col-md-offset-4 panel3">
+            <h2>Results of Your Video Game Survey</h2>
+            <p class="results"></p>
+
+          </div>
+
+        </div>
+
+      </div>
+    </div>
 
     <script src="js/scripts.js"></script>
   </body>
